A second commit of the WestEradiate project that has routes for the pages

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -110,10 +110,10 @@
         <img src="../images/logo.png" alt="Logo" id="logo">
         <nav>
             <ul id="nav-links">
-                <li><a href="landing.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="resources.html">Resources</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About Us</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/resources">Resources</a></li>
             </ul>
             <div class="menuToggle">
                 <div class="menuToggleIcons">
@@ -121,16 +121,16 @@
                     <span class="material-symbols-outlined menuOpenClose" id="closeIcon">close</span>    
                 </div>
                 <div id="menuDropdown" class="menuBar">
-                    <a href="landing.html">Home</a>
-                    <a href="about.html">About us</a>
-                    <a href="contact.html">Contact</a>
-                    <a href="resources.html">Resources</a>
+                    <a href="/">Home</a>
+                    <a href="/about">About us</a>
+                    <a href="/contact">Contact</a>
+                    <a href="/resources">Resources</a>
                 </div>
             </div>
         </nav>
         <div class="auth-buttons" id="auth-buttons-top">
-            <button id="loginFormBtn" onclick="openLoginForm()">Login</button>
-            <button id="signupFormBtn" onclick="openSignupForm()">Sign Up</button>
+            <button id="loginFormBtn">Login</button>
+            <button id="signupFormBtn">Sign Up</button>
         </div>
     </header>
     
