--- a/public/html/login.html
+++ b/public/html/login.html
@@ -18,6 +18,8 @@
         background-color: var(--primary-color);
     }
     .loginFormContainer{
+        justify-content: center;
+        align-items: center;
         box-shadow: 1px 2px 8px 1px rgba(0, 0, 0, 0.3);
         height: 90vh;
         width: 80%;
@@ -125,10 +127,10 @@
         </form>
         <div class="noAccount column_flex_container">
             <p>Don't have an account?</p>
-            <p><a href="signup.html">Create account</a></p>
+            <p><a href="/signup">Create account</a></p>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
