--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -119,10 +119,10 @@
         </form>
         <div class="haveAccount column_flex_container">
             <p>Already have an account?</p>
-            <p><a href="login.html">Login</a></p>
+            <p><a href="/login">Login</a></p>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
