--- a/public/html/landing.html
+++ b/public/html/landing.html
@@ -72,10 +72,10 @@
         <img src="../images/logo.png" alt="Logo" id="logo">
         <nav>
             <ul id="nav-links">
-                <li><a href="landing.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="resources.html">Resources</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About Us</a></li>
+                <li><a href="/contact">Contact</a></li>
+                <li><a href="/resources">Resources</a></li>
             </ul>
             <div class="menuToggle">
                 <div class="menuToggleIcons">
@@ -83,10 +83,10 @@
                     <span class="material-symbols-outlined menuOpenClose" id="closeIcon">close</span>    
                 </div>
                 <div id="menuDropdown" class="menuBar">
-                    <a href="landing.html">Home</a>
-                    <a href="about.html">About us</a>
-                    <a href="contact.html">Contact</a>
-                    <a href="resources.html">Resources</a>
+                    <a href="/">Home</a>
+                    <a href="/about">About us</a>
+                    <a href="/contact">Contact</a>
+                    <a href="/resources">Resources</a>
                 </div>
             </div>
         </nav>
@@ -95,8 +95,8 @@
     <main id="main-content">
         <p id="slogan">Cleaner Communities, Greener Futures!</p>
         <div class="auth-buttons" id="auth-buttons-bottom">
-            <button onclick="showLogin()">Login</button>
-            <button onclick="showSignup()">Sign Up</button>
+            <button id="loginFormBtn">Login</button>
+            <button id="signupFormBtn">Sign Up</button>
         </div>
     </main>
 
