A commit with the user profile page layout

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -110,7 +110,7 @@
         <img src="../images/logo.png" alt="Logo" id="logo">
         <nav>
             <ul id="nav-links">
-                <li><a href="/">Home</a></li>
+                <li><a href="/welcome">Home</a></li>
                 <li><a href="/about">About Us</a></li>
                 <li><a href="/contact">Contact</a></li>
                 <li><a href="/resources">Resources</a></li>
@@ -121,7 +121,7 @@
                     <span class="material-symbols-outlined menuOpenClose" id="closeIcon">close</span>    
                 </div>
                 <div id="menuDropdown" class="menuBar">
-                    <a href="/">Home</a>
+                    <a href="/welcome">Home</a>
                     <a href="/about">About us</a>
                     <a href="/contact">Contact</a>
                     <a href="/resources">Resources</a>
