--- a/public/html/help.html
+++ b/public/html/help.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/main.css">
+
     <style>
         html, body{
             height: 100%;
@@ -50,8 +51,8 @@
     </header>
 
     <main id="platformMainContainer">
-        <section id="mapContainer" class="pageMainContent">
-            <p>This is the container where the MAP container would recide</p>
+        <section id="helpContainer" class="pageMainContent">
+            <p>This is the page HELP will be displayed</p>
         </section>
     </main>
 
