--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/main.css">
+
     <style>
         html, body{
             height: 100%;
@@ -50,8 +51,33 @@
     </header>
 
     <main id="platformMainContainer">
-        <section id="mapContainer" class="pageMainContent">
-            <p>This is the container where the MAP container would recide</p>
+        <section id="profileContainer" class="pageMainContent column_flex_container_center">
+            <span id="profileIcon" class="material-symbols-outlined">person</span>
+
+            <p>Hello, welcome to your personal profile.</p>
+
+            <div id="profileContentContainer">
+                <div id="userNameContainer" class="userInfo">
+                    <h3>Name</h3>
+                    <span id="profileName">The username added with javascript</span>
+                </div>
+                <div id="userEmailContainer" class="userInfo">
+                    <h3>Email</h3>
+                    <span id="profileEmail">The user email added with javascript</span>
+                </div>
+                <div id="userRegistrationDateContainer" class="userInfo">
+                    <h3>Registration Date</h3>
+                    <span id="profileDate">The registration date added with javascript</span>
+                </div>
+                <div id="userPhoneContainer" class="userInfo">
+                    <h3>Phone</h3>
+                    <span id="profilePhone">The phone number added with javascript</span>
+                </div>
+                <div id="userRoleContainer" class="userInfo">
+                    <h3>Role</h3>
+                    <span id="profileRole">The role added with javascript</span>
+                </div>
+            </div>
         </section>
     </main>
 
