A commit just before adding the map in the westeradict platform

--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -59,23 +59,23 @@
             <div id="profileContentContainer">
                 <div id="userNameContainer" class="userInfo">
                     <h3>Name</h3>
-                    <span id="profileName">The username added with javascript</span>
+                    <span id="profileName"></span>
                 </div>
                 <div id="userEmailContainer" class="userInfo">
                     <h3>Email</h3>
-                    <span id="profileEmail">The user email added with javascript</span>
+                    <span id="profileEmail"></span>
                 </div>
                 <div id="userRegistrationDateContainer" class="userInfo">
                     <h3>Registration Date</h3>
-                    <span id="profileDate">The registration date added with javascript</span>
+                    <span id="profileDate"></span>
                 </div>
                 <div id="userPhoneContainer" class="userInfo">
                     <h3>Phone</h3>
-                    <span id="profilePhone">The phone number added with javascript</span>
+                    <span id="profilePhone"></span>
                 </div>
                 <div id="userRoleContainer" class="userInfo">
                     <h3>Role</h3>
-                    <span id="profileRole">The role added with javascript</span>
+                    <span id="profileRole"></span>
                 </div>
             </div>
         </section>
