--- a/public/html/notifications.html
+++ b/public/html/notifications.html
@@ -35,6 +35,16 @@
         <div id="logoContainer">
             <img src="../images/logo.png" alt="Logo" id="logo">
         </div>
+
+        <!-- The dark and light theme toggle container -->
+        <div class="theme">
+            <span class="material-symbols-outlined" id="lightMode">light_mode</span>
+            <div id="lightModeTooltip">Switch to light theme</div>
+
+            <span class="material-symbols-outlined" id="darkMode">dark_mode</span>
+            <div id="darkModeTooltip">Switch to dark theme</div>
+        </div>
+        
         <div class="platformMenuIconAndLogout row_flex_container">
             <div class="menuClass">
                 <i class="fa fa-bars" id="platformMenuIcon"></i>
