A commit with the modification of landing.html to index.html

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -72,10 +72,10 @@
         <img src="../images/logo.png" alt="Logo" id="logo">
         <nav>
             <ul id="nav-links">
-                <li><a href="/welcome">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/about">About Us</a></li>
-                <li><a href="/contact">Contact</a></li>
-                <li><a href="/resources">Resources</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Resources</a></li>
             </ul>
             <div class="menuToggle">
                 <div class="menuToggleIcons">
@@ -83,10 +83,10 @@
                     <span class="material-symbols-outlined menuOpenClose" id="closeIcon">close</span>    
                 </div>
                 <div id="menuDropdown" class="menuBar">
-                    <a href="/welcome">Home</a>
+                    <a href="/">Home</a>
                     <a href="/about">About us</a>
-                    <a href="/contact">Contact</a>
-                    <a href="/resources">Resources</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Resources</a>
                 </div>
             </div>
         </nav>
