Specific routig in the netlify.toml and complete adjustment of paths to relative

--- a/public/html/resetPass.html
+++ b/public/html/resetPass.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../images/appLogo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"> <!--Poppins font-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  <!-- Link to Font Awesome CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <style>
     body{
@@ -98,6 +98,6 @@
         </div>
     </div>
     
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
