--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../images/appLogo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <style>
         body {
             background-color: white;
@@ -158,6 +158,6 @@
 
     </div>
 
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
