--- a/public/html/about.html
+++ b/public/html/about.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../images/appLogo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"> <!--Poppins font-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <style>
 
         main{
@@ -191,6 +191,6 @@
         <p>&copy; Since 2024. All rights reserverd</p>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
