Absolute path of the links to another files

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -39,6 +39,11 @@
             font-style: italic;
             color: white;
         }
+        @media(max-width: 500px){
+            .callToAction1 p{
+                font-size: 20px;
+            }
+        }
         .callToAction1 p span:nth-child(1){
             color: red;
         }
