Additional responsiveness of the visuals in the about page

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -41,7 +41,10 @@
         }
         @media(max-width: 500px){
             .callToAction1 p{
-                font-size: 20px;
+                font-size: 25px;
+            }
+            .visuals{
+                border: none;
             }
         }
         .callToAction1 p span:nth-child(1){
