--- a/public/html/about.html
+++ b/public/html/about.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../images/appLogo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"> <!--Poppins font-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <style>
 
         main{
@@ -44,7 +44,7 @@
                 font-size: 25px;
             }
             .visuals{
-                border: none;
+                border: 0 solid black;
             }
         }
         .callToAction1 p span:nth-child(1){
@@ -59,7 +59,7 @@
             justify-content: center;
             align-items: center;
             gap: 20px;
-            border: 1px solid black;
+            /* border: 1px solid black; */
             width: 100%;
             margin-top: 30px;
             margin-inline: 50px;
