--- a/public/html/login.html
+++ b/public/html/login.html
@@ -77,7 +77,7 @@
                 <input type="password" name="password" id="userPassword" placeholder="Password" required>
                 <i class="fa fa-eye icon" id="eyeIcon"></i>
                 <i class="fa fa-eye-slash icon" id="eyeSlashIcon"></i>
-                <a href="/forgotPass" id="forgotPassword">Forgot password?</a>
+                <a href="/forgotPassword" id="forgotPassword">Forgot password?</a>
                 <button type="submit">Login</button>
             </form>
         </div>
